--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
+@import url("https://fonts.googleapis.com/css?family=Source+Code+Pro");
+* {
+  margin: 0;
+  padding: 0;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
+    Oxygen, "Ubuntu", Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+    
+}
+body {
+    background-color: #03050f;
+  }
