--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -1,9 +1,9 @@
 .footer {
     min-height: 30vh;
-    background-color: #02020c;
+    background-color: #03050f;
     padding: 60px 40px 20px 40px;
     text-align: center;
-    border-top: 1px solid #0e0e294b;
+    border-top: 0.5px solid #05091a;
   }
   
   .footer h1 {
