--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -4,7 +4,7 @@
     loop
     muted
     autoplay
-    src="/assets/bg.mp4"
+    src="assets/bg.mp4"
     type="video/mp4"
   ></video>
   <div class="main">
@@ -34,7 +34,7 @@
 <div class="services-article">
   <div class="article">
     <div class="article-img">
-      <img src="/assets/coding.gif" alt="coding gif" />
+      <img src="assets/coding.gif" alt="coding gif" />
     </div>
     <div class="article-text-box">
       <h1>What We Provide</h1>
@@ -50,6 +50,7 @@
   </div>
   <div class="skills">
     <h1 class="heading-skills">Skills</h1>
+    <!-- <img src="assets/" alt="coding gif" /> -->
     <div class="skills-list">
       <div class="skill">
         <i class="fa-brands fa-html5"></i>
@@ -75,4 +76,16 @@
   </div>
 </div>
 <!-- <app-project-slider></app-project-slider> -->
-<app-footer></app-footer>
+<div class="slider">
+  <p-galleria
+    [value]="img"
+    [autoPlay]="true"
+    [showThumbnails]="false"
+    [transitionInterval]="3000"
+    [containerStyle]="{ 'max-width': '1000px' }"
+  >
+    <ng-template pTemplate="item" let-img>
+      <img [src]="img.URL" style="width: 100%; display: block" />
+    </ng-template>
+  </p-galleria>
+</div>
