--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -3,13 +3,13 @@
         <div class="nav-links">
           <ul>
             <li class="nav-li">
-              <a href="https://zaeemali272.github.io/quintessential-devs-new/"
+              <a href="/home"
                 >HOME</a
               >
             </li>
             <li class="nav-li">
               <a
-                href="https://zaeemali272.github.io/quintessential-devs-new/Projects/"
+                href="/projects"
                 >PROJECTS</a
               >
             </li>
