--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -5,7 +5,12 @@
       align-items: center;
       justify-content: center;
       // padding: 20px auto;
-      background: rgba(0, 0, 0, 0.8);
+      background: linear-gradient(
+        to top,
+        rgba(0, 0, 0, 0.8),
+        rgba(8, 8, 8, 0.9),
+        #08080f
+      );
       background-position: center;
       background-size: cover;
       li {
@@ -19,7 +24,7 @@
         text-decoration: none;
         font-size: 13px;
         font-weight: 500;
-        text-shadow: 1px 1px 2px #03050f;
+        // text-shadow: 1px 1px 2px #03050f;
       }
     }
   }
