--- a/src/app/components/slider/slider.component.html
+++ b/src/app/components/slider/slider.component.html
@@ -3,8 +3,8 @@
     [value]="img"
     [autoPlay]="true"
     [showThumbnails]="false"
-    [transitionInterval]="3000"
-    [containerStyle]="{ 'max-width': '{{GalleriaWidth}}' }"
+    [transitionInterval]="5000"
+    [containerStyle]="{ 'max-width': GalleriaWidth }"
   >
     <ng-template pTemplate="item" let-img>
       <img [src]="img.URL" style="width: 100%; display: block" />
