--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -76,4 +76,6 @@
   </div>
 </div>
 <!-- <app-project-slider></app-project-slider> -->
-<app-slider [GalleriaWidth]="width"></app-slider>
+ <div class="slide-main">
+   <app-slider [GalleriaWidth]="width"></app-slider>
+ </div>
