--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -264,13 +264,13 @@
 .skills {
   background: linear-gradient(
       to bottom,
-      rgba(0, 0, 0, 0.8),
+      #03050f,
       rgba(3, 5, 15, 0.9),
-      #03050ffe,
+      rgba(3, 5, 15, 0.9),
+      #03050f,
       #03050f
     ),
     url("/assets/banner.jpg");
-
   //remove the / later
   background-attachment: fixed;
   padding: 100px;
@@ -312,6 +312,11 @@
       }
     }
   }
+}
+
+.slider-main {
+  width: 100%;
+  height: 600px;
 }
 
 /* text animation */
