--- a/src/app/components/slider/slider.component.scss
+++ b/src/app/components/slider/slider.component.scss
@@ -1,8 +1,7 @@
-
 //slider
 .slider {
-  background-color: #03050f;
-  padding: 100px;
+  background: #03050f;
+  // padding: 100px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -10,12 +9,13 @@
   color: #ffffffd7;
   margin: auto;
   align-items: center;
+  // width: 100vh;
 
   p-galleria {
     img {
-      width: 100%;
-      border-radius: 20px;
-      box-shadow: 0px 0px 40px 40px #03050f;
+      // width: 1000px;
+      border-radius: 25px;
+      box-shadow: 0px 0px 10px 10px #020207;
     }
   }
 }
